--- a/d00/ex03/responsive.css
+++ b/d00/ex03/responsive.css
@@ -5,16 +5,19 @@ body{
   background-color: #ABFFFF;
 }
 body div{
-  width: 90%;
+  width: 95%;
   display: flex; flex-wrap: wrap;
   justify-content: center;
 }
-img{position: absolute; right:0px; top:0px}
+.header{
+	display: flex;
+	justify-content:center;
+}
+img{flex:none; width:15%; height:60%; margin:3%;}
 h1{
   flex: none;
-  font-size: 70px;
-  height: 150px;
-  width: 100%;
+  font-size: 50px;
+  width: 70%; height:20%;
   text-align: center;
 }
 table {
@@ -23,27 +26,27 @@ table {
   border-collapse: collapse;
 }
 /* table, th, td {border: 1px solid black} */
-td{height: 70px; width: 5.5%;}
+td{height: 7%; width: 6%;}
 .atomic_weight{
   position: relative;
-  height: 15px;
+  height: 10%;
   text-align: right;
   font-size: 10px;
-  padding-right: 4px; margin: 0px;
+  margin: 1% 1% 0% 0%;
 }
 .atom{
   position: relative;
   font-weight: bold;
   text-align: center;
-  font-size: 35px;
-  padding: 4px; margin: 0px;
+  font-size: 30px;
+  padding: 1%; margin: 0%;
 }
 .atomic_number{
   position: relative;
-  height: 15px;
+  height: 10%;
   text-align: left; line-height: 15px;
   font-size: 13px;
-  padding-right: 4px; margin: 0px;
+  margin: 0% 0% 1% 1%;
 }
 
 tr:nth-child(n+2) td:nth-child(1){background-color: #F59F00; border: 1px solid black}
